--- a/alw_landwirtschaft_tierhaltung_pub/build.gradle
+++ b/alw_landwirtschaft_tierhaltung_pub/build.gradle
@@ -62,5 +62,5 @@ task transferALWAgrardaten(type: Db2Db, dependsOn: importGELAN){
 }
 
 task refreshSolr(type:Exec, dependsOn:'transferALWAgrardaten') {
-	commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.alw.bienenstandorte_und_sperrgebiete.bienenstandorte'
+	commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.alw.bienenstandorte_und_sperrgebiete.bienenstandorte,ch.so.alw.landwirtschaft_tierhaltung.kulturflaechen_bff_qualitaetsstufe_I,ch.so.alw.landwirtschaft_tierhaltung.kulturflaechen_bff_qualitaetsstufe_I_geschuetzt,ch.so.alw.landwirtschaft_tierhaltung.kulturflaechen_hauptkategorien,ch.so.alw.landwirtschaft_tierhaltung.kulturflaechen_hauptkategorien_geschuetzt,ch.so.alw.landwirtschaft_tierhaltung.kultur_punktelement_bff_qualitaetsstufe_I,ch.so.alw.landwirtschaft_tierhaltung.kultur_punktelement_bff_qualitaetsstufe_I_geschuetzt'
 }
