--- a/arp_npl_pub/build.gradle
+++ b/arp_npl_pub/build.gradle
@@ -2,6 +2,8 @@ import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 
 def GROUP = "npl_edit_to_pub"
+def DB_Schema_NPL = "arp_npl_pub"
+def DB_Schema_Hoheitsgr = "agi_hoheitsgrenzen_pub"
 
 defaultTasks 'updateAggregationGrundnutzungsflaechen'
 
@@ -45,6 +47,7 @@ task bfsZuordnung(type: SqlExecutor, dependsOn:'datenBereinigungPostProcessing')
     description = "Wegen noch nicht fusionierter Zonenplandaten müssen die BFS-Nr durch geografische Beziehung nochmals zu den AV Gemeinden zugewiesen werden."
     database = [dbUriPub, dbUserPub, dbPwdPub]
     sqlFiles = ['arp_npl_pub_bfs_zuordnung.sql']
+    sqlParameters = [[dbSchemaNPL:DB_Schema_NPL],[dbSchemaHoheitsg:DB_Schema_Hoheitsgr]]
 }
 
 task updateAggregationGrundnutzungsflaechen(type: SqlExecutor, dependsOn: "bfsZuordnung") {
