--- a/alw_fruchtfolgeflaechen/01_Datenimport/build_local.gradle
+++ b/alw_fruchtfolgeflaechen/01_Datenimport/build_local.gradle
@@ -30,11 +30,11 @@ task makeSchemaMopublic(type: Ili2pgImportSchema){
     database = [dbUriProcessing, dbUserProcessing, dbPwdProcessing]
     models = "SO_AGI_MOpublic_20201009"
     dbschema = "agi_mopublic_pub"
-    strokeArcs = "True"
-    beautifyEnumDispName = "True"
-    createUnique = "True" 
-    nameByTopic = "True" 
-    createMetaInfo = "True" 
+    strokeArcs = true
+    beautifyEnumDispName = true
+    createUnique = true 
+    nameByTopic = true 
+    createMetaInfo = true 
 }
 
 task importBodenbedeckung(type: Db2Db, dependsOn: makeSchemaMopublic){
@@ -80,11 +80,11 @@ task makeSchemaGewaesserschutz(type: Ili2pgImportSchema){
     database = [dbUriProcessing, dbUserProcessing, dbPwdProcessing]
     models = "SO_AfU_Gewaesserschutz_Publikation_20210303"
     dbschema = "afu_gewaesserschutz_pub"
-    strokeArcs = "True"
-    beautifyEnumDispName = "True"
-    createUnique = "True" 
-    nameByTopic = "True" 
-    createMetaInfo = "True" 
+    strokeArcs = true
+    beautifyEnumDispName = true
+    createUnique = true 
+    nameByTopic = true 
+    createMetaInfo = true 
 }
 
 task importGewaesserschutz(type: Db2Db, dependsOn: makeSchemaGewaesserschutz){
