[arp_npl_pub] Datenbereinigung an Postgis 3.1 / GEOS 3.9 anpassen

--- a/arp_npl_pub/build.gradle
+++ b/arp_npl_pub/build.gradle
@@ -41,6 +41,7 @@ task datenBereinigungPostProcessing(type: SqlExecutor, dependsOn:'transferAlteGr
     description = "Datenbereinigung wegen invaliden Geometrien, kann nach ili2pg-Upgrade entfernt werden"
     database = [dbUriPub, dbUserPub, dbPwdPub]
     sqlFiles = ['arp_npl_pub_datenbereinigung.sql']
+    sqlParameters = [dbSchemaNPL:DB_Schema_NPL]
 }
 
 task bfsZuordnung(type: SqlExecutor, dependsOn:'datenBereinigungPostProcessing'){
