--- a/arp_auswertung_nutzungsplanung_pub/build.gradle
+++ b/arp_auswertung_nutzungsplanung_pub/build.gradle
@@ -11,10 +11,9 @@ apply plugin: 'ch.so.agi.gretl'
 import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 
-defaultTasks 'ZusammenfassungUndGINES'
-/*defaultTasks 'BauzonenstatistikStart'*/
+defaultTasks 'BauzonenstatistikStart'
 
-/*def BfsNrGemeinden = [2401, 2402, 2403, 2404, 2405, 2406, 2407, 2408,
+def BfsNrGemeinden = [2401, 2402, 2403, 2404, 2405, 2406, 2407, 2408,
                       2421, 2422, 2424, 2425, 2426, 2427, 2428, 2arp_auswertung_nutzungsplanung_pub_v1430,
                       2445,
                       2455, 2456, 2457,
@@ -35,15 +34,9 @@ defaultTasks 'ZusammenfassungUndGINES'
                       2601,
                       2611, 2612, 2613, 2614, 2615, 2616, 2617, 2618, 2619,
                       2620, 2621, 2622
-] */
+]
 
-/* Gemeindefusionen 2021:
-2423 (Gänsbrunnen) + 2429 (Welschenrohr) --> 2430 (Welschenrohr-Gänsbrunngen)
-2498 (Rohr SO)) + 2499 (Stüsslingen) --> 2499 (Stüsslingen)
-*/
-
-
-def BfsNrGemeinden = [2401, 2402]
+/* def BfsNrGemeinden = [2401, 2402] */
 
 def DB_Schema_NPL = "arp_npl_pub"
 def DB_Schema_Hoheitsgr = "agi_hoheitsgrenzen_pub"
