--- a/arp_auswertung_nutzungsplanung_pub/build.gradle
+++ b/arp_auswertung_nutzungsplanung_pub/build.gradle
@@ -65,7 +65,7 @@ BfsNrGemeinden.each { bfsNr ->
         database = [dbUriPub, dbUserPub, dbPwdPub]
         sqlParameters = [DB_Schema_AuswNPL:DB_Schema_AuswNPL,gem_bfs:bfsNr as String]
         /*sqlFiles = ['bauzonenstatistik_bebauungsstand_mit_zonen_ohne_lsgrenzen.sql','bauzonenstatistik_bebauungsstand_mit_zonen_und_lsgrenzen.sql','bauzonenstatistik_liegenschaft_nach_bebauungsstand.sql']*/
-        sqlFiles = ['bauzonenstatistik_bebauungsstand_mit_zonen_ohne_lsgrenzen.sql','bauzonenstatistik_bebauungsstand_mit_zonen_und_lsgrenzen.sql']
+        sqlFiles = ['bauzonenstatistik_liegenschaft_nach_bebauungsstand.sql']
     }
 }
 
