--- a/arp_auswertung_nutzungsplanung_pub/build.gradle
+++ b/arp_auswertung_nutzungsplanung_pub/build.gradle
@@ -52,7 +52,7 @@ task UebertragUebersteuerungBebauungsstand(type: Db2Db) {
     ];
 }
 
-task BauzonenstatistikStart(dependsOn: "UebertragUebersteuerungBebauungsstand") {
+task BauzonenstatistikStart() {
     description = "Übergeordneter Task für Iteration über alle Gemeinden in der Bauzonenstatistik."
     dependsOn {
         tasks.findAll { task -> task.name.startsWith('BauzonenstatistikProcessing_') }
@@ -61,7 +61,7 @@ task BauzonenstatistikStart(dependsOn: "UebertragUebersteuerungBebauungsstand") 
 }
 
 BfsNrGemeinden.each { bfsNr ->
-    task "BauzonenstatistikProcessing_$bfsNr"(type: SqlExecutor) {
+    task "BauzonenstatistikProcessing_$bfsNr"(type: SqlExecutor,dependsOn: "UebertragUebersteuerungBebauungsstand") {
         description = "Eigentliche Bauzonenstatitik"
         database = [dbUriPub, dbUserPub, dbPwdPub]
         sqlParameters = [DB_Schema_AV:DB_Schema_AV,DB_Schema_NPL:DB_Schema_NPL,DB_Schema_Hoheitsgr:DB_Schema_Hoheitsgr,DB_Schema_AuswNPL:DB_Schema_AuswNPL,gem_bfs:bfsNr as String]
