--- a/arp_npl_pub/build.gradle
+++ b/arp_npl_pub/build.gradle
@@ -2,6 +2,8 @@ import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 
 def GROUP = "npl_edit_to_pub"
+def DB_Schema_NPL = "arp_npl_pub"
+def DB_Schema_Hoheitsgr = "agi_hoheitsgrenzen_pub"
 
 defaultTasks 'updateAggregationGrundnutzungsflaechen'
 
@@ -39,9 +41,17 @@ task datenBereinigungPostProcessing(type: SqlExecutor, dependsOn:'transferAlteGr
     description = "Datenbereinigung wegen invaliden Geometrien, kann nach ili2pg-Upgrade entfernt werden"
     database = [dbUriPub, dbUserPub, dbPwdPub]
     sqlFiles = ['arp_npl_pub_datenbereinigung.sql']
+    sqlParameters = [dbSchemaNPL:DB_Schema_NPL]
 }
 
-task updateAggregationGrundnutzungsflaechen(type: SqlExecutor, dependsOn: "datenBereinigungPostProcessing") {
+task bfsZuordnung(type: SqlExecutor, dependsOn:'datenBereinigungPostProcessing'){
+    description = "Wegen noch nicht fusionierter Zonenplandaten müssen die BFS-Nr durch geografische Beziehung nochmals zu den AV Gemeinden zugewiesen werden."
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    sqlFiles = ['arp_npl_pub_bfs_zuordnung.sql']
+    sqlParameters = [dbSchemaNPL:DB_Schema_NPL,dbSchemaHoheitsgr:DB_Schema_Hoheitsgr]
+}
+
+task updateAggregationGrundnutzungsflaechen(type: SqlExecutor, dependsOn: "bfsZuordnung") {
     description = "Aktualisierung der aggregierten Zonenflächen pro Gemeinde"
     group = GROUP
     database = [dbUriPub, dbUserPub, dbPwdPub]
