--- a/afu_infoflora/build.gradle
+++ b/afu_infoflora/build.gradle
@@ -15,7 +15,7 @@ apply plugin: "de.undercouch.download"
 apply plugin: 'ch.so.agi.gretl'
 
 
-defaultTasks 'deleteFileOnServer'
+defaultTasks 'transferAfUInfofloraPub'
 
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 def pathToUnzipFolder = Paths.get(pathToTempFolder)
@@ -136,10 +136,18 @@ task deleteFileOnServer(dependsOn: makeGeometry){
             for (String localFileid : project.fileid) {
                 exec {
                     workingDir '/tmp'
-                    commandLine 'curl', '-i', '-u', infofloraUser + ':' + infofloraPwd, '-k', '-X', 'DELETE', '--header', 'Content-T    ype:application/json', 'https://obs.infoflora.ch/rest/v4/docs/'+localFileid+'.json'
+                    commandLine 'curl', '-i', '--http1.1', '-u', infofloraUser + ':' + infofloraPwd, '-k', '-X', 'DELETE', '--header', 'Content-T    ype:application/json', 'https://obs.infoflora.ch/rest/v4/docs/'+localFileid+'.json'
                     println "Deleted file ID: " + localFileid + " from Server"
                 }
             }
         }    
     }
+}
+
+task transferAfUInfofloraPub(type: Db2Db, dependsOn: deleteFileOnServer){
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    transferSets = [
+            new TransferSet('afu_infoflora_pub.sql', 'afu_infoflora_pub.neophyten_neophytenstandorte', true)
+    ];
 }
