--- a/avt_oev_gueteklassen_import/Jenkinsfile
+++ b/avt_oev_gueteklassen_import/Jenkinsfile
@@ -28,11 +28,13 @@ pipeline {
         stage('Run GRETL-Job') {
             steps {
                 git url: gretlJobRepoUrl, branch: "${params.BRANCH ?: 'master'}", changelog: false
-                dir(env.JOB_BASE_NAME) {
-                    unstash name: 'uploadDir'
-                    sh 'gretl import_to_stage'
-                    input message: "Fortfahren und die Daten publizieren?", ok: "OK"
-                    sh 'gretl import_to_pub'
+                container('gretl') {
+                    dir(env.JOB_BASE_NAME) {
+                        unstash name: 'uploadDir'
+                        sh 'gretl import_to_stage'
+                        input message: "Fortfahren und die Daten publizieren?", ok: "OK"
+                        sh 'gretl import_to_pub'
+                    }
                 }
             }
         }
