[arp_nutzungsplanung] Anpassung failOnError im build.gradle

--- a/arp_nutzungsplanung_import/Jenkinsfile
+++ b/arp_nutzungsplanung_import/Jenkinsfile
@@ -38,7 +38,7 @@ pipeline {
                         sh "gretl -Pili2pgDataset=$inputFile.ili2pgDataset transferData"
                         waitUntil {
                             sh "gretl -Pili2pgDataset=$inputFile.ili2pgDataset validateData_Dataset_BFSNr validateData_Dataset_Kanton"
-                            input message: 'Den Datenimport abschliessen oder die Transferdaten nochmals exportieren?', parameters: [booleanParam(name: 'FINISH', defaultValue: false, description: 'Häkchen setzen, um den Datenimport abzuschliessen')]
+                            input message: 'Den Datenimport abschliessen oder die Transferdaten nochmals aus dem Schema arp_nutzungsplanung_transfer exportieren?', parameters: [booleanParam(name: 'FINISH', defaultValue: false, description: 'Häkchen setzen, um den Datenimport abzuschliessen')]
                         }
                         sh "gretl -Pili2pgDataset=$inputFile.ili2pgDataset importData_Dataset_BFSNr importData_Dataset_Kanton"
                     }
