[arp_nutzungsplanng] Anpassung SQL-Parameter, allObjectsAccessible = true bei _import

--- a/arp_nutzungsplanung_import/build.gradle
+++ b/arp_nutzungsplanung_import/build.gradle
@@ -64,6 +64,7 @@ task exportData_Dataset_BFSNr(type: Ili2pgExport) {
 task validateData_Dataset_BFSNr(type: IliValidator, dependsOn: 'exportData_Dataset_BFSNr') {
     description = "Validiert die exportierten INTERLIS-Datei gegen das Modell."
     dataFiles = file(ili2pgDataset + ".xtf")
+    allObjectsAccessible = true
     failOnError = false
 }
 
@@ -95,6 +96,7 @@ task exportData_Dataset_Kanton(type: Ili2pgExport) {
 task validateData_Dataset_Kanton(type: IliValidator, dependsOn: 'exportData_Dataset_Kanton') {
     description = "Validiert die exportierten INTERLIS-Datei gegen das Modell."
     dataFiles = file(ili2pgDataset + "_Kanton.xtf")
+    allObjectsAccessible = true
     failOnError = false
 }
 
