[arp_nutzungsplanung_pub] Ergänzung stringParam:buildDescription und nur Objekte die kein Datum unter "publiziertbis" haben, werden ins Pub-Schema importiert

--- a/arp_nutzungsplanung_pub/Jenkinsfile
+++ b/arp_nutzungsplanung_pub/Jenkinsfile
@@ -15,6 +15,7 @@ pipeline {
         stage('Import into staging schema') {
             agent { label 'gretl' }
             steps {
+                script { currentBuild.description = "${params.buildDescription}" }
                 git url: gretlJobRepoUrl, branch: "${params.BRANCH ?: 'master'}", changelog: false
                 container('gretl') {
                     dir(env.JOB_BASE_NAME) {
