--- a/arp_nutzungsplanung_pub/job.properties
+++ b/arp_nutzungsplanung_pub/job.properties
@@ -1,3 +1,4 @@
+parameters.stringParam:buildDescription;Keine Beschreibung angegeben;Beschreibung/Grund für die Publikation der Daten
 logRotator.numToKeep=unlimited
 parameters.stringParam=bfsnr;;BFS-Nr. der Gemeinde welche publiziert werden soll.
 authorization.permissions=gretl-users-bjsvw
