--- a/arp_nutzungsplanung_delete_dataset/job.properties
+++ b/arp_nutzungsplanung_delete_dataset/job.properties
@@ -1,3 +1,3 @@
 logRotator.numToKeep=15
-parameters.stringParam=bfsnr;;BFS-Nr. der Gemeinde von welchen die Nutzungsplanungsdaten im Schema arp_nutzungsplanung_v1 gelöscht werden sollen.
+parameters.stringParams=bfsnr;;BFS-Nr. der Gemeinde von welchen die Nutzungsplanungsdaten im Schema arp_nutzungsplanung_v1 gelöscht werden sollen.
 authorization.permissions=gretl-users-bjsvw
