--- a/arp_nutzungsplanung_pub/Jenkinsfile
+++ b/arp_nutzungsplanung_pub/Jenkinsfile
@@ -9,7 +9,7 @@ node('master') {
 pipeline {
     agent none
     options {
-        timeout(time: 6, unit: 'HOURS')
+        timeout(time: 7, unit: 'DAYS')
     }
     stages {
         stage('Import into staging schema') {
