Fixup: Use @ as stringParam separator

--- a/arp_nutzungsplanung_pub/job.properties
+++ b/arp_nutzungsplanung_pub/job.properties
@@ -1,4 +1,4 @@
 logRotator.numToKeep=unlimited
-parameters.stringParams=bfsnr;;BFS-Nr. der Gemeinde welche publiziert werden soll.|\
+parameters.stringParams=bfsnr;;BFS-Nr. der Gemeinde welche publiziert werden soll.@\
                         buildDescription;Keine Beschreibung angegeben;Beschreibung/Grund für die Publikation der Daten
 authorization.permissions=gretl-users-bjsvw
