[arp_nutzungsplanung_pub] Disable concurrent builds

--- a/arp_nutzungsplanung_pub/Jenkinsfile
+++ b/arp_nutzungsplanung_pub/Jenkinsfile
@@ -9,6 +9,7 @@ node('master') {
 pipeline {
     agent none
     options {
+        disableConcurrentBuilds()
         timeout(time: 7, unit: 'DAYS')
     }
     stages {
