--- a/arp_nutzungsplanung_kanton_pub/Jenkinsfile
+++ b/arp_nutzungsplanung_kanton_pub/Jenkinsfile
@@ -20,6 +20,7 @@ pipeline {
                 git url: gretlJobRepoUrl, branch: "${params.BRANCH ?: 'master'}", changelog: false
                 container('gretl') {
                     dir(env.JOB_BASE_NAME) {
+                        sh "gretl importXTF_stage"
                         zip zipFile: 'xtfdata.zip', glob: '*.xtf', archive: true
                     }
                 }
@@ -43,6 +44,7 @@ pipeline {
                 unstash name: "gretljob"
                 container('gretl') {
                     dir(env.JOB_BASE_NAME) {
+                        sh "gretl importXTF_pub"
                     }
                 }
             }
