--- a/alw_gelan_person/job.properties
+++ b/alw_gelan_person/job.properties
@@ -1,3 +1,3 @@
 logRotator.numToKeep=30
 authorization.permissions=gretl-users-barpa
-triggers.upstream=alw_gelan_pub
+triggers.upstream=alw_landwirtschaft_tierhaltung_pub
