Make Git repo URL available in an environment variable

--- a/alw_fruchtfolgeflaechen/Jenkinsfile
+++ b/alw_fruchtfolgeflaechen/Jenkinsfile
@@ -1,11 +1,3 @@
-// Start with a scripted pipeline part
-node('master') {
-    stage('Prepare') {
-        gretlJobRepoUrl = env.GRETL_JOB_REPO_URL
-    }
-}
-
-// Declarative pipeline starts here
 pipeline {
     options {
         disableConcurrentBuilds()
@@ -67,7 +59,7 @@ pipeline {
                 ORG_GRADLE_PROJECT_dbPwdProcessing = 'pass'
             }
             steps {
-                git url: gretlJobRepoUrl, branch: "${params.BRANCH ?: 'master'}", changelog: false
+                git url: "${env.GIT_REPO_URL}", branch: "${params.BRANCH ?: 'master'}", changelog: false
                 container('gretl') {
                     dir(env.JOB_BASE_NAME) {
                         sh 'gretl prepare_db importAll'
