--- a/arp_nutzungsplanung_pub/Jenkinsfile
+++ b/arp_nutzungsplanung_pub/Jenkinsfile
@@ -1,11 +1,3 @@
-// Start with a scripted pipeline part
-node('master') {
-    stage('Prepare') {
-        gretlJobRepoUrl = env.GRETL_JOB_REPO_URL
-    }
-}
-
-// Declarative pipeline starts here
 pipeline {
     agent none
     options {
@@ -17,7 +9,7 @@ pipeline {
             agent { label 'gretl' }
             steps {
                 script { currentBuild.description = "${params.buildDescription}" }
-                git url: gretlJobRepoUrl, branch: "${params.BRANCH ?: 'master'}", changelog: false
+                git url: "${env.GIT_REPO_URL}", branch: "${params.BRANCH ?: 'master'}", changelog: false
                 container('gretl') {
                     dir(env.JOB_BASE_NAME) {
                         sh "gretl -Pbfsnr=${params.bfsnr} importXTF_stage"
