[agi_check_ili_export] Test mit Limit 2 CPUs
Vielleicht kann so der Job beschleunigt werden

--- a/agi_check_ili_export/Jenkinsfile
+++ b/agi_check_ili_export/Jenkinsfile
@@ -12,6 +12,7 @@ pipeline {
                     memory: 5.5Gi
                   limits:
                     memory: 5.5Gi
+                    cpu: "2"
 '''
         }
     }
