--- a/afu_gewaesser_gewaessereigenschaften_pub/build.gradle
+++ b/afu_gewaesser_gewaessereigenschaften_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAfugewaessereigenschaften'
+defaultTasks 'updateTxtCols'
 
 task transferAfugewaessereigenschaften(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
@@ -11,4 +11,10 @@ task transferAfugewaessereigenschaften(type: Db2Db){
     transferSets = [
             new TransferSet('gewaessereigenschaften.sql', 'afu_gewaesser_gewaessereigenschaften_pub_v1.gewaessereigenschaften', true)
     ];
+}
+
+task updateTxtCols(type: SqlExecutor, dependsOn:transferAfugewaessereigenschaften){
+    description = "Füllt die _txt-Spalten ab"
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    sqlFiles = ['updateTxtCols.sql']
 }
